fixed whitespace outside of html

--- a/src/css/base/_resets.scss
+++ b/src/css/base/_resets.scss
@@ -3,10 +3,12 @@ html {
     padding: 0;
     margin: 0;
     scroll-behavior: smooth;
+    
 }
   
 *, *:before, *:after {
-box-sizing: inherit; 
+    box-sizing: inherit; 
+    overflow: hidden;
 }
 
 img {
@@ -22,6 +24,7 @@ table {
 
 body {
     margin: 0;
+    padding: 0;
     
    /*   background-color: #0a192f; */
      background: linear-gradient(to left top, rgba(14, 16, 27, 0.99) 10%, rgba(21, 23, 39, 0.99) 50%, rgba(14, 16, 27, 0.99));
@@ -34,8 +37,8 @@ h1, h2, h3, h4, h5, h6, p {
 #tsparticles {
     width: 100%;
     height: 100%;
-
 }
+
 .particles{
     position:absolute !important;
     z-index: -2;
