--- a/src/css/media-queries/_media-queries.scss
+++ b/src/css/media-queries/_media-queries.scss
@@ -1,6 +1,7 @@
 .container {
     margin: 0 auto;
     height: 100%;
+    width: 100%;
 
     @media(min-width: 605px) {
          width: 768px; 
