--- a/src/css/pages/_mtm.scss
+++ b/src/css/pages/_mtm.scss
@@ -27,6 +27,15 @@ main {
                 margin: 0 auto;
                
             }    
+
+            .main-image {
+                width: 436px;
+                margin: 0 auto;
+
+                @media(min-width: 768px) {
+                    width: 575px;
+                }
+            }
         }
 
         cite, p {
